package Decorator;

public abstract class ComboMixDecorator extends ComboMix {
	
	ComboMix comboMix;
	
	public abstract String getComboType();

}
