@startuml
skinparam classAttributeIconSize 0
title __DECORATOR's Class Diagram__\n

    namespace om.MovieBookingSystem.Decorator {
      abstract class com.MovieBookingSystem.Decorator.ComboMix {
          ~ comboType : String
          {abstract} + comboMixPrice()
          + getComboType()
      }
    }



    namespace om.MovieBookingSystem.Decorator {
      abstract class com.MovieBookingSystem.Decorator.ComboMixDecorator {
          {abstract} + getComboType()
      }
    }




  


    namespace om.MovieBookingSystem.Decorator {
      class com.MovieBookingSystem.Decorator.Malteser {
          + Malteser()
          + comboMixPrice()
          + getComboType()
      }
    }



    namespace om.MovieBookingSystem.Decorator {
      class com.MovieBookingSystem.Decorator.Nachos {
          + Nachos()
          + comboMixPrice()
          + getComboType()
      }
    }

  


    namespace om.MovieBookingSystem.Decorator {
      class com.MovieBookingSystem.Decorator.OmniPassDiscount {
          + OmniPassDiscount()
          + comboMixPrice()
          + getComboType()
      }
    }

  


    namespace om.MovieBookingSystem.Decorator {
      class com.MovieBookingSystem.Decorator.ShareCombo {
          + ShareCombo()
          + comboMixPrice()
      }
    }

  


    namespace om.MovieBookingSystem.Decorator {
      class com.MovieBookingSystem.Decorator.SingleCombo {
          + SingleCombo()
          + comboMixPrice()
      }
    }

  



  

  com.MovieBookingSystem.Decorator.ComboMixDecorator -up-|> com.MovieBookingSystem.Decorator.ComboMix
  com.MovieBookingSystem.Decorator.ComboMixDecorator o-- com.MovieBookingSystem.Decorator.ComboMix : comboMix
  com.MovieBookingSystem.Decorator.Malteser -up-|> com.MovieBookingSystem.Decorator.ComboMixDecorator
  com.MovieBookingSystem.Decorator.Nachos -up-|> com.MovieBookingSystem.Decorator.ComboMixDecorator
  com.MovieBookingSystem.Decorator.OmniPassDiscount -up-|> com.MovieBookingSystem.Decorator.ComboMixDecorator
  com.MovieBookingSystem.Decorator.ShareCombo -up-|> com.MovieBookingSystem.Decorator.ComboMix
  com.MovieBookingSystem.Decorator.SingleCombo -up-|> com.MovieBookingSystem.Decorator.ComboMix


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
